fix(payload): header should not wrap

--- a/src/pages/panel/components/Payload/index.less
+++ b/src/pages/panel/components/Payload/index.less
@@ -25,6 +25,7 @@
   .header {
     display: flex;
     align-items: center;
+    white-space: nowrap;
     .title {
       font-size: 13px;
       font-weight: bold;
